hphp/hack/test/package_v1/package_access/cross_package_access_bad5.php
//// modules.php
<?hh
new module a {}

//// a.php
<?hh
// package pkg1
module a;
public class A {}


//// b.php
<?hh
// default package
class B {
  public function test(): void {
    $a = new A(); // error
  }
}
